Add class to hr

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <section class='call-to-action-section'>
     <header class='call-to-action-section__header'>
       <h1 class='call-to-action-section__h1'>Magna veroeros</h1>
-      <hr/>
+      <hr class='call-to-action-section__hr'/>
     </header>
     <div class='call-to-action-section__call-to-action'>
       <img class='call-to-action-section__image' src='placeholder.jpg' alt='placeholder-text'/>
