--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang='en'>
 <head>
   <meta charset='UTF-8'/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
   <title>BEM 101</title>
 </head>
 <body>
   <section class='call-to-action-section'>
     <header class='call-to-action-section__header'>
-      <h1 class='call-to-action-section__h1'>Magna veroeros</h1>
-      <hr class='call-to-action-section__hr'/>
+      <h1 class='call-to-action-section__large-title'>Magna veroeros</h1>
+      <hr class='call-to-action-section__title-underline'/>
     </header>
-    <div class='call-to-action-section__call-to-action'>
-      <img class='call-to-action-section__image' src='placeholder.jpg' alt='placeholder-text'/>
-      <h2 class='call-to-action-section__h2'>Lorem ipsum</h2>
-      <p class='call-to-action-section__copy'>Morbi nec massa placerat, efficitur libero eu, posuere ex.</p>
+    <div class='call-to-action'>
+      <img class='call-to-action__image' src='placeholder.jpg' alt='placeholder-text'/>
+      <h2 class='call-to-action__med-header'>Lorem ipsum</h2>
+      <p class='call-to-action__copy'>Morbi nec massa placerat, efficitur libero eu, posuere ex.</p>
     </div>
-    <div class='call-to-action-section__call-to-action'>
-      <img class='call-to-action-section__image' src='placeholder.jpg' alt='placeholder-text'/>
-      <h2 class='call-to-action-section__h2'>Lorem ipsum</h2>
-      <p class='call-to-action-section__copy'>Morbi nec massa placerat, efficitur libero eu, posuere ex.</p>
+    <div class='call-to-action'>
+      <img class='call-to-action__image' src='placeholder.jpg' alt='placeholder-text'/>
+      <h2 class='call-to-action__med-header'>Lorem ipsum</h2>
+      <p class='call-to-action__copy'>Morbi nec massa placerat, efficitur libero eu, posuere ex.</p>
     </div>
-    <div class='call-to-action-section__call-to-action'>
-      <img class='call-to-action-section__image' src='placeholder.jpg' alt='placeholder-text'/>
-      <h2 class='call-to-action-section__h2'>Lorem ipsum</h2>
-      <p class='call-to-action-section__copy'>Morbi nec massa placerat, efficitur libero eu, posuere ex.</p>
+    <div class='call-to-action'>
+      <img class='call-to-action__image' src='placeholder.jpg' alt='placeholder-text'/>
+      <h2 class='call-to-action__med-header'>Lorem ipsum</h2>
+      <p class='call-to-action__copy'>Morbi nec massa placerat, efficitur libero eu, posuere ex.</p>
     </div>
     <button class='call-to-action-section__learn-more-button'>Learn More</button>
   </section>
